# llvm-instrument

./: .gitignore  CMakeLists.txt  README.md  find.sh  issues.txt  runPass.sh
common/: CmpType.h  help_printer.cpp  help_printer.h  socket.cpp  socket.h
dynlib/: Callbacks.cpp  Common.cpp  Common.h  MallocCallbacks.cpp  SECallbacks.cpp  SymManager.h
dynlib/function/: Frame.cpp  Frame.h  FrameManager.cpp  FrameManager.h
dynlib/instrument/: InstrumentBlock.cpp  InstrumentBlock.h  RuntimeContext.cpp  RuntimeContext.h
dynlib/memory/: Allocator.h  HeapBlock.cpp  HeapBlock.h  HeapManager.cpp  HeapManager.h  LinkerManager.cpp  LinkerManager.h  MemoryBlock.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h  MmapAllocator.cpp  MmapAllocator.h  StaticAllocator.h
dynlib/path/: PathCondition.cpp  PathCondition.h
dynlib/symbolic/: Add.cpp  Add.h  Concrete.cpp  Concrete.h  Constant.cpp  Constant.h  Constraint.cpp  Constraint.h  ICmp.cpp  ICmp.h  SymManager.cpp  SymManager.h  SymbolicInt.cpp  SymbolicInt.h
dynlib/util/: Formatter.cpp  Formatter.h  Logger.cpp  Logger.h
instrumentation/: Context.cpp  Context.h  DirectRun.cpp  Instrumenter.cpp  Instrumenter.h  Pass.cpp  Pass.h  RegisterPass.cpp
instrumentation/instruction/: Call.cpp  Call.h  ExprBuilder.cpp  ExprBuilder.h  FunctionBuilder.cpp  FunctionBuilder.h  Functions.cpp  Functions.h  InstructionDispatcher.cpp  InstructionDispatcher.h  InstructionHandler.cpp  InstructionHandler.h  Instrumenter.cpp  Instrumenter.h  Store.cpp  Store.h  Types.cpp  Types.h  Values.cpp  Values.h
instrumentation/track/: CallMap.cpp  CallMap.h  ValueRegistry.cpp  ValueRegistry.h
instrumentation/util/: DebugInfo.cpp  DebugInfo.h  DebugUtil.cpp  DebugUtil.h  Demangler.cpp  Demangler.h  Logger.cpp  Logger.h  Singleton.h  Util.cpp  Util.h
instrumentation/util/compile/: MemoryCompileAction.cpp  MemoryCompileAction.h  MemoryCompiler.cpp  MemoryCompiler.h
interpret/: Execution.cpp  ExternalFunctions.cpp  Interpret.cpp  Interpret.h  main.cpp
rewinder/: MapSegment.cpp  MapSegment.h  State.h  StateManager.cpp  StateManager.h  rewinder.cpp
scripts/: runPass.sh
